Fixed toolbar z-index and positioning of the icons when vertically aligned

--- a/styles/package-support/project-viewer.less
+++ b/styles/package-support/project-viewer.less
@@ -15,7 +15,7 @@ project-viewer {
   z-index: 100;
   padding: 0;
   margin-top: @tab-height;
-  z-index: 400;
+  z-index: 1400;
 
   & > .list-tree {
     max-height: 0;
