--- a/styles/package-support/tool-bar.less
+++ b/styles/package-support/tool-bar.less
@@ -13,6 +13,7 @@ copyright   Copyright (C) 2016-2017 Tuomas Hatakka                              
 
   @{horizontal}, @{vertical} {
     padding-top: @tab-height;
+    box-sizing: border-box;
 
     hr.tool-bar-spacer {
       -webkit-mask-image: none !important;
@@ -28,6 +29,7 @@ copyright   Copyright (C) 2016-2017 Tuomas Hatakka                              
   @{vertical} {
     transition: width @transition-time;
     width: @tab-height !important;
+    z-index: 1000;
 
     &:hover {
       width: 240px !important }
@@ -37,15 +39,16 @@ copyright   Copyright (C) 2016-2017 Tuomas Hatakka                              
       margin-bottom: 1em }
 
     button {
-      line-height: 48px@tab-height;
       text-align: left;
-      margin: 0;
+      margin: 0 !important;
+      padding: 0 !important;
       width: auto !important }
 
     button::before {
       display: inline-block;
       vertical-align: middle;
       text-align: center;
+      margin-left: -5px;
       width: @tab-height }
 
     button::after {
